# streamlit-stockview-app

./: Makefile  README.md  pyproject.toml
app/: functions.py  main.py
scripts/: demo.py  run.py
stockview/: analysis.py  data.py  report.py
stockview/app/: analysis.py  dashboard.py
streamlit_stockview_app.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
