[tool.poetry]
name = "stockview"
version = "0.1.0"
description = ""
authors = ["mkizawa930 <m.kappa930@gmail.com>"]
# readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ta-lib = "^0.4.30"
yfinance = "^0.2.40"
pytest = "^8.2.2"
isort = "^5.13.2"
black = "^24.4.2"
flake8 = "^7.1.0"
joblib = "^1.4.2"
discord = "^2.3.2"
mdutils = "^1.6.0"
python-dotenv = "^1.0.1"
matplotlib = "^3.9.0"
pydantic = "^2.7.4"
pydantic-settings = "^2.3.3"
mplfinance = "^0.12.10b0"
tabulate = "^0.9.0"
table2ascii = "^1.1.3"
streamlit = "^1.36.0"
plotly = "^5.22.0"
altair = "^5.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
